--- a/index.html
+++ b/index.html
@@ -62,6 +62,6 @@
         ReactDOM.render(<Form />, document.getElementById("form-example"));
     </script>
     
-    <!-- Sayrelle James Tiron -->
+    <!-- Lorenzo M. Riano -->
 </body>
 </html>
